edited head to include title tag in html doc

--- a/game.html
+++ b/game.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Pattern Blocks Game Demo</title>
         <script src="game.js"></script>
     </head>
     <body onload="init();">
