--- a/game.html
+++ b/game.html
@@ -3,6 +3,8 @@
     <head>
         <title>Pattern Blocks Game Demo</title>
         <script src="game.js"></script>
+        <link rel="stylesheet" type="text/css" href="game.css">
+
     </head>
     <body onload="init();">
 
