--- a/game.html
+++ b/game.html
@@ -3,8 +3,9 @@
     <head>
         <title>Pattern Blocks Game Demo</title>
         <script src="game.js"></script>
+        <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1524180/createjs.min.js"></script>
+        <script src="https://code.createjs.com/easeljs-0.8.2.min.js"></script>
         <link rel="stylesheet" type="text/css" href="game.css">
-
     </head>
     <body onload="init();">
 
